fixed static map creation for Java 8